# pagarpro

./: .gitignore  1st_prompt.md  CLAUDE.md  README.md  docker-compose.yml
_bmad/: config.toml  (+1 more)
src/backend-api/: .dockerignore  .env.example  .gitignore  Dockerfile  alembic.ini  pyproject.toml
src/backend-api/alembic/: env.py
src/backend-api/alembic/versions/: 0001_initial_empty.py  0002_identity_tables.py  0003_asset_abstraction_layer.py  0004_customers.py  0005_vehicles.py  0006_contracts.py  0007_payables_and_expenses.py  0008_conversations_and_agent.py  0010_dashboard_materialized_views.py  0011_system_settings_and_integration_credentials.py  0012_bank_reconciliation.py  0013_integration_credentials_update.py  0014_contract_generation_mode.py  0015_schema_restructure.py  0016_fix_multi_tenant_uniques.py  0017_rename_fks_and_conversa_fields.py  0018_add_legacy_columns_to_models.py  0019_contrato_observacoes.py  0020_row_level_security.py  0021_configuracoes_tipadas.py  0022_templates_mensagem.py  0023_contrato_maquina_estados.py  0024_tipo_titulo_e_opcao_compra.py  0025_motor_observabilidade.py  0026_comprovantes_pagamento.py  0027_matches_conciliacao.py  0028_evolution_go_multi_numero.py  0029_credenciais_multi_instancia.py  0030_state_machine_e_clientes.py  0031_desbloqueio_confianca_ate.py  0032_aumentar_tipo_arquivo_comprovante.py  0033_whatsapp_provedor_config.py
src/backend-api/app/: main.py
src/backend-api/app/api/: deps.py  exception_handlers.py  middleware.py  sse.py
src/backend-api/app/cli/: import_vehicles.py  seed.py
src/backend-api/app/core/: config.py  correlation.py  di.py  sse_auth.py  tenant_context.py
src/backend-api/app/infrastructure/: settings.py
(+655 files in other folders)
