[project]
name = "app"
version = "0.1.0"
description = "Generic recurring-billing and collections platform"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic[email]>=2.9",
    "pydantic-settings>=2.5",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.13",
    "redis>=5.0",
    "boto3>=1.34",
    "structlog>=24.0",
    "python-dotenv>=1.0",
    "celery[redis]>=5.4",
    "httpx>=0.27",
    "argon2-cffi>=23.1",
    "PyJWT[crypto]>=2.9",
    "sse-starlette>=2.0",
    "python-multipart>=0.0.9",
    "openpyxl>=3.1",
    "weasyprint>=62.0",
    "jinja2>=3.1",
    "qrcode[pil]>=7.4",
    "Pillow>=10.0",
    # Story 13.19 — análise de comprovantes PIX (sem IA por padrão)
    "pyzbar>=0.1.9",
    "pdfplumber>=0.11",
    "pytesseract>=0.3.10",
    "opencv-python-headless>=4.10",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
# Engine OCR premium (opt-in — ~600MB, mais preciso em imagens degradadas)
ocr-premium = [
    "paddleocr>=2.7",
    "paddlepaddle>=2.6",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
    "httpx>=0.27",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["app/tests"]
